Finish heading section for mobile screen

--- a/index.html
+++ b/index.html
@@ -12,8 +12,20 @@
 
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
-<body>
-    <h1>Hello World</h1>
+<body class="dark-mode">
+    <div class="wrapper ">
+        <header class="sm-header md-header">
+            <h1 class="sm-h1 md-h1 lg-h1">Where in the world?</h1>
+            <button id="mode-btn" class="sm-mode-btn md-mode-btn lg-mode-btn">
+                <img src="" alt="">
+                <span id="mode-name">Dark Mode</span>
+            </button>
+        </header>
+        <main>
 
+        </main>
+    </div>
+
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
