Finished main section UI for all screens

--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
             </button>
         </header>
         <main>
+            <!-- search section -->
             <section class="search-section">
                 <div class="search-bar">
                     <span class="material-symbols-outlined" id="search-icon">
                         search
                     </span>
-                    <input type="search" name="search-term" id="search-term" class="search-term" placeholder="Search for a country">
+                    <input type="search" name="search-term" id="search-term" class="search-term" placeholder="Search for a country...">
                 </div>
                 <div class="search-region-wrapper">
                     <div class="region-tab">
@@ -56,8 +57,64 @@
                     </div>
                 </div>
             </section>
-            <section class="cards">
 
+            <!-- country section -->
+            <section class="countries">
+                <div class="country-card">
+                    <div class="flag-wrapper">
+                        <img src="https://flagcdn.com/ag.svg" alt="">
+                    </div>
+                    <div class="demographic-wrapper">
+                        <h2 class="country-name">Nigeria</h2>
+                        <p><strong>Population:</strong> <span>123463</span></p>
+                        <p><strong>Population:</strong> <span>123455</span></p>
+                        <p><strong>Population:</strong> <span>123432</span></p>
+                    </div>
+                </div>
+                <div class="country-card">
+                    <div class="flag-wrapper">
+                        <img src="https://flagcdn.com/ag.svg" alt="">
+                    </div>
+                    <div class="demographic-wrapper">
+                        <h2 class="country-name">Nigeria</h2>
+                        <p><strong>Population:</strong> <span>123463</span></p>
+                        <p><strong>Population:</strong> <span>123455</span></p>
+                        <p><strong>Population:</strong> <span>123432</span></p>
+                    </div>
+                </div>
+                <div class="country-card">
+                    <div class="flag-wrapper">
+                        <img src="https://flagcdn.com/ag.svg" alt="">
+                    </div>
+                    <div class="demographic-wrapper">
+                        <h2 class="country-name">Nigeria</h2>
+                        <p><strong>Population:</strong> <span>123463</span></p>
+                        <p><strong>Population:</strong> <span>123455</span></p>
+                        <p><strong>Population:</strong> <span>123432</span></p>
+                    </div>
+                </div>
+                <div class="country-card">
+                    <div class="flag-wrapper">
+                        <img src="https://flagcdn.com/ag.svg" alt="">
+                    </div>
+                    <div class="demographic-wrapper">
+                        <h2 class="country-name">Nigeria</h2>
+                        <p><strong>Population:</strong> <span>123463</span></p>
+                        <p><strong>Population:</strong> <span>123455</span></p>
+                        <p><strong>Population:</strong> <span>123432</span></p>
+                    </div>
+                </div>
+                <div class="country-card">
+                    <div class="flag-wrapper">
+                        <img src="https://flagcdn.com/ag.svg" alt="">
+                    </div>
+                    <div class="demographic-wrapper">
+                        <h2 class="country-name">Nigeria</h2>
+                        <p><strong>Population:</strong> <span>123463</span></p>
+                        <p><strong>Population:</strong> <span>123455</span></p>
+                        <p><strong>Population:</strong> <span>123432</span></p>
+                    </div>
+                </div>
             </section>
         </main>
     </div>
