--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
             <!-- country section -->
             <section class="countries">
-                <div class="country-card">
+                <!-- <div class="country-card">
                     <div class="flag-wrapper">
                         <img src="https://flagcdn.com/ag.svg" alt="">
                     </div>
@@ -70,51 +70,7 @@
                         <p><strong>Population:</strong> <span>123455</span></p>
                         <p><strong>Population:</strong> <span>123432</span></p>
                     </div>
-                </div>
-                <div class="country-card">
-                    <div class="flag-wrapper">
-                        <img src="https://flagcdn.com/ag.svg" alt="">
-                    </div>
-                    <div class="demographic-wrapper">
-                        <h2 class="country-name">Nigeria</h2>
-                        <p><strong>Population:</strong> <span>123463</span></p>
-                        <p><strong>Population:</strong> <span>123455</span></p>
-                        <p><strong>Population:</strong> <span>123432</span></p>
-                    </div>
-                </div>
-                <div class="country-card">
-                    <div class="flag-wrapper">
-                        <img src="https://flagcdn.com/ag.svg" alt="">
-                    </div>
-                    <div class="demographic-wrapper">
-                        <h2 class="country-name">Nigeria</h2>
-                        <p><strong>Population:</strong> <span>123463</span></p>
-                        <p><strong>Population:</strong> <span>123455</span></p>
-                        <p><strong>Population:</strong> <span>123432</span></p>
-                    </div>
-                </div>
-                <div class="country-card">
-                    <div class="flag-wrapper">
-                        <img src="https://flagcdn.com/ag.svg" alt="">
-                    </div>
-                    <div class="demographic-wrapper">
-                        <h2 class="country-name">Nigeria</h2>
-                        <p><strong>Population:</strong> <span>123463</span></p>
-                        <p><strong>Population:</strong> <span>123455</span></p>
-                        <p><strong>Population:</strong> <span>123432</span></p>
-                    </div>
-                </div>
-                <div class="country-card">
-                    <div class="flag-wrapper">
-                        <img src="https://flagcdn.com/ag.svg" alt="">
-                    </div>
-                    <div class="demographic-wrapper">
-                        <h2 class="country-name">Nigeria</h2>
-                        <p><strong>Population:</strong> <span>123463</span></p>
-                        <p><strong>Population:</strong> <span>123455</span></p>
-                        <p><strong>Population:</strong> <span>123432</span></p>
-                    </div>
-                </div>
+                </div>               -->
             </section>
         </main>
     </div>
