Added Search by Region functionality

--- a/index.html
+++ b/index.html
@@ -49,11 +49,12 @@
                         </span>
                     </div>
                     <div class="region-list">
-                        <p>Africa</p>
-                        <p>America</p>
-                        <p>Asia</p>
-                        <p>Europe</p>
-                        <p>Oceania</p>
+                        <p class="continent">All</p>
+                        <p class="continent">Africa</p>
+                        <p class="continent">America</p>
+                        <p class="continent">Asia</p>
+                        <p class="continent">Europe</p>
+                        <p class="continent">Oceania</p>
                     </div>
                 </div>
             </section>
