Updated Search by Region functionality

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <div class="region-list">
                         <p class="continent">All</p>
                         <p class="continent">Africa</p>
-                        <p class="continent">America</p>
+                        <p class="continent">Americas</p>
                         <p class="continent">Asia</p>
                         <p class="continent">Europe</p>
                         <p class="continent">Oceania</p>
