--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <div class="wrapper ">
-        <header class="sm-header md-header hide">
+        <header class="sm-header md-header">
             <h1 class="sm-h1 md-h1 lg-h1">Where in the world?</h1>
             <button id="mode-btn" class="sm-mode-btn md-mode-btn lg-mode-btn">
                 <span class="material-symbols-outlined" id="mode-icon">
@@ -65,6 +65,43 @@
                         <p><strong>Population:</strong> <span>123463</span></p>
                         <p><strong>Population:</strong> <span>123455</span></p>
                         <p><strong>Population:</strong> <span>123432</span></p>
+                    </div>
+                </div>               -->
+            </section>
+
+            <!-- Show Country Details -->
+            <section class="country-modal hide">                
+                <!-- <button class="close-country-modal">Back</button>
+
+                <div class="details">
+                    <div class="flag">
+                        <img src="https://flagcdn.com/ag.svg" alt="">
+                    </div>
+
+                    <div class="details-text">
+                        <h2 class="country-name">Belgium</h2>
+                        <div class="left-right-dtails">
+                            <div class="left-details">
+                                <p><strong>Native Name:</strong> <span>123463</span></p>
+                                <p><strong>Population:</strong> <span>123455</span></p>
+                                <p><strong>Region:</strong> <span>123432</span></p>
+                                <p><strong>Sub Region:</strong> <span>123432</span></p>
+                                <p><strong>Capital:</strong> <span>123432</span></p>
+                            </div>
+                            <div class="right-details">
+                                <p><strong>Top Level Domain:</strong> <span>123463</span></p>
+                                <p><strong>Currencies:</strong> <span>123455</span></p>
+                                <p><strong>Languages:</strong> <span>123432</span></p>
+                            </div>
+                        </div>
+                        <div class="border-countries">
+                            <h5>Border Countries</h5>
+                            <ul>
+                                <li>Country1</li>
+                                <li>Country2</li>
+                                <li>Country3</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>               -->
             </section>
