--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             expand_more
                         </span>
                     </div>
-                    <div class="region-list">
+                    <div class="region-list hide">
                         <p class="continent">All</p>
                         <p class="continent">Africa</p>
                         <p class="continent">Americas</p>
@@ -71,7 +71,12 @@
 
             <!-- Show Country Details -->
             <section class="country-modal hide">                
-                <!-- <button class="close-country-modal">Back</button>
+                <!-- <button class="close-country-modal"> 
+                    <span class="material-symbols-outlined">
+                        keyboard_backspace
+                    </span>
+                    Back
+                </button>
 
                 <div class="details">
                     <div class="flag">
