Updated css for country modal

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <span id="mode-name">Dark Mode</span>
             </button>
         </header>
-        <main>
+        <main class="main">
             <!-- search section -->
             <section class="search-section">
                 <div class="search-bar">
@@ -78,34 +78,37 @@
                     Back
                 </button>
 
-                <div class="details">
-                    <div class="flag">
-                        <img src="https://flagcdn.com/ag.svg" alt="">
-                    </div>
-
-                    <div class="details-text">
-                        <h2 class="country-name">Belgium</h2>
-                        <div class="left-right-dtails">
-                            <div class="left-details">
-                                <p><strong>Native Name:</strong> <span>123463</span></p>
-                                <p><strong>Population:</strong> <span>123455</span></p>
-                                <p><strong>Region:</strong> <span>123432</span></p>
-                                <p><strong>Sub Region:</strong> <span>123432</span></p>
-                                <p><strong>Capital:</strong> <span>123432</span></p>
-                            </div>
-                            <div class="right-details">
-                                <p><strong>Top Level Domain:</strong> <span>123463</span></p>
-                                <p><strong>Currencies:</strong> <span>123455</span></p>
-                                <p><strong>Languages:</strong> <span>123432</span></p>
-                            </div>
+                <div class="details-text-wrapper">
+                    <div class="details">
+                        <div class="flag">
+                            <img src="https://flagcdn.com/ag.svg" alt="">
                         </div>
-                        <div class="border-countries">
-                            <h5>Border Countries</h5>
-                            <ul>
-                                <li>Country1</li>
-                                <li>Country2</li>
-                                <li>Country3</li>
-                            </ul>
+                        
+                        
+                        <div class="details-text">
+                            <h2 class="country-name">Belgium</h2>
+                            <div class="left-right-details">
+                                <div class="left-details">
+                                    <p><strong>Native Name:</strong> <span>123463</span></p>
+                                    <p><strong>Population:</strong> <span>123455</span></p>
+                                    <p><strong>Region:</strong> <span>123432</span></p>
+                                    <p><strong>Sub Region:</strong> <span>123432</span></p>
+                                    <p><strong>Capital:</strong> <span>123432</span></p>
+                                </div>
+                                <div class="right-details">
+                                    <p><strong>Top Level Domain:</strong> <span>123463</span></p>
+                                    <p><strong>Currencies:</strong> <span>123455</span></p>
+                                    <p><strong>Languages:</strong> <span>123432</span></p>
+                                </div>
+                            </div>
+                            <div class="border-countries">
+                                <h5>Border Countries</h5>
+                                <ul>
+                                    <li>Country1</li>
+                                    <li>Country2</li>
+                                    <li>Country3</li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>               -->
